// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Calendar /Day 1`] = `
<div>
  <button
    class="button activeMonth past"
    title="2020-05-5"
    type="button"
  >
    5
  </button>
</div>
`;

exports[`components/Calendar /Day 2`] = `
<div>
  <button
    class="button activeMonth today"
    title="2020-05-5"
    type="button"
  >
    5
  </button>
</div>
`;

exports[`components/Calendar /Day 3`] = `
<div>
  <button
    class="button activeMonth today disabled"
    disabled=""
    title="2020-05-5"
    type="button"
  >
    5
  </button>
</div>
`;

exports[`components/Calendar /Day 4`] = `
<div>
  <button
    class="button activeMonth today choosen disabled"
    disabled=""
    title="2020-05-5"
    type="button"
  >
    5
  </button>
</div>
`;
